--- a/StudentRegistration/src/main/webapp/WEB-INF/web.xml
+++ b/StudentRegistration/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" id="WebApp_ID" version="5.0">
-  <display-name>JavaServlet</display-name>
+  <display-name>StudentRegistration</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
@@ -11,13 +11,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.xhtml</welcome-file>
   </welcome-file-list>
-  
   <servlet>
-  	<servlet-name>servename</servlet-name>
-  	<servlet-class>com.cdac.LoginServlet</servlet-class>
+  	<servlet-name>studereg</servlet-name>
+  	<servlet-class>com.student.RegistrationServe</servlet-class>
   </servlet>
+  
   <servlet-mapping>
-  	<servlet-name>servename</servlet-name>
-  	<url-pattern>/login</url-pattern>
+  	<servlet-name>studereg</servlet-name>
+  	<url-pattern>/register</url-pattern>
   </servlet-mapping>
+  
 </web-app>
