--- a/StudentRegHibernate/pom.xml
+++ b/StudentRegHibernate/pom.xml
@@ -14,6 +14,34 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    
+    <dependency>
+<groupId>org.hibernate.orm</groupId>
+<artifactId>hibernate-core</artifactId>
+<version>7.2.0.CR4</version>
+</dependency>
+<!--  https://mvnrepository.com/artifact/mysql/mysql-connector-java  -->
+<dependency>
+<groupId>mysql</groupId>
+<artifactId>mysql-connector-java</artifactId>
+<version>8.0.33</version>
+</dependency>
+<!--  Servlet API  -->
+<dependency>
+<groupId>jakarta.servlet</groupId>
+<artifactId>jakarta.servlet-api</artifactId>
+<version>6.0.0</version>
+<scope>provided</scope>
+</dependency>
+<!--  JSP API  -->
+<dependency>
+<groupId>jakarta.servlet.jsp</groupId>
+<artifactId>jakarta.servlet.jsp-api</artifactId>
+<version>3.1.1</version>
+<scope>provided</scope>
+</dependency>
+
   </dependencies>
   <build>
     <finalName>StudentRegHibernate</finalName>
