--- a/StudentRegHibernate/src/main/webapp/WEB-INF/web.xml
+++ b/StudentRegHibernate/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,29 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" id="WebApp_ID" version="5.0">
+<display-name>Archetype Created Web Application</display-name>
+<welcome-file-list>
+<welcome-file>index.html</welcome-file>
+<welcome-file>index.jsp</welcome-file>
+<welcome-file>index.htm</welcome-file>
+<welcome-file>default.html</welcome-file>
+<welcome-file>default.jsp</welcome-file>
+<welcome-file>default.htm</welcome-file>
+<welcome-file>register.html</welcome-file>
+</welcome-file-list>
+<servlet>
+<servlet-name>RegisterServlet</servlet-name>
+<servlet-class>com.cdac.RegisterServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>RegisterServlet</servlet-name>
+<url-pattern>/register</url-pattern>
+</servlet-mapping>
+<servlet>
+<servlet-name>ViewStudentsServlet</servlet-name>
+<servlet-class>com.cdac.ViewStudentsServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>ViewStudentsServlet</servlet-name>
+<url-pattern>/view</url-pattern>
+</servlet-mapping>
 </web-app>
