--- a/StudentRegHibernate/src/main/webapp/WEB-INF/web.xml
+++ b/StudentRegHibernate/src/main/webapp/WEB-INF/web.xml
@@ -1,29 +1,54 @@
-
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" id="WebApp_ID" version="5.0">
-<display-name>Archetype Created Web Application</display-name>
-<welcome-file-list>
-<welcome-file>index.html</welcome-file>
-<welcome-file>index.jsp</welcome-file>
-<welcome-file>index.htm</welcome-file>
-<welcome-file>default.html</welcome-file>
-<welcome-file>default.jsp</welcome-file>
-<welcome-file>default.htm</welcome-file>
-<welcome-file>register.html</welcome-file>
-</welcome-file-list>
-<servlet>
-<servlet-name>RegisterServlet</servlet-name>
-<servlet-class>com.cdac.RegisterServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-<servlet-name>RegisterServlet</servlet-name>
-<url-pattern>/register</url-pattern>
-</servlet-mapping>
-<servlet>
-<servlet-name>ViewStudentsServlet</servlet-name>
-<servlet-class>com.cdac.ViewStudentsServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-<servlet-name>ViewStudentsServlet</servlet-name>
-<url-pattern>/view</url-pattern>
-</servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xmlns="https://jakarta.ee/xml/ns/jakartaee" 
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" 
+         id="WebApp_ID" version="5.0">
+    
+    <display-name>Student Registration Hibernate Application</display-name>
+    
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>register.html</welcome-file>
+    </welcome-file-list>
+    
+    <!-- Register Servlet -->
+    <servlet>
+        <servlet-name>RegisterServlet</servlet-name>
+        <servlet-class>com.cdac.RegisterServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RegisterServlet</servlet-name>
+        <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+    
+    <!-- View Students Servlet -->
+    <servlet>
+        <servlet-name>ViewStudentsServlet</servlet-name>
+        <servlet-class>com.cdac.ViewStudentsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ViewStudentsServlet</servlet-name>
+        <url-pattern>/view</url-pattern>
+    </servlet-mapping>
+    
+    <!-- Update Servlet -->
+    <servlet>
+        <servlet-name>UpdateServlet</servlet-name>
+        <servlet-class>com.cdac.UpdateServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UpdateServlet</servlet-name>
+        <url-pattern>/update</url-pattern>
+    </servlet-mapping>
+    
+    <!-- Delete Servlet -->
+    <servlet>
+        <servlet-name>DeleteServlet</servlet-name>
+        <servlet-class>com.cdac.DeleteServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DeleteServlet</servlet-name>
+        <url-pattern>/delete</url-pattern>
+    </servlet-mapping>
+    
 </web-app>
